part1/logger/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mylog
spec:
  selector:
    matchLabels:
      app: mylog
  template:
    metadata:
      labels:
        app: mylog
    spec:
      volumes: # Define volume
        - name: shared-log
          persistentVolumeClaim:
            claimName: mypvc-claim
      containers:
      - name: mylog
        image: aaartyoms/logger-reader:0.0.5v
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: shared-log
            mountPath: /usr/src/app/files
      - name: log-writer
        image: aaartyoms/logger-writer:0.0.3v
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: shared-log
            mountPath: /usr/src/app/files
