part1/logger/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-svc
spec:
  type: ClusterIP
  selector:
    app: mylog
  ports:
  - port: 2345
    targetPort: 3000
