part1/logger/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-ingress
  namespace: small-apps
  # labels:
  #   name: log-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: log-svc
                port:
                  number: 2345
          - pathType: Prefix
            path: "/pingpong"
            backend:
              service:
                name: ping-pong-svc
                port:
                  number: 4444
